<resources>
    <string name="app_name">ALLanucher</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_home_fragment">this is Home screen</string>
    <string name="pre_defined_widget_fragment">pre defined widgets screen</string>
    <string name="user_customize_widget_fragment">user customize widgets screen</string>
    <string name="icon_wrapper_desc">new app icon</string>
    <string name="default_shortcut_icon_desc">shortcut icon</string>
    <string name="default_shortcut_texts">shortcut texts</string>

    <!-- common shortcuts -->
    <string name="label_uninstall">Uninstall</string>
    <string name="label_edit">Edit</string>
    <string name="label_app_info">AppInfo</string>
    <string name="label_widget">Widget</string>
    <string name="indicatorDesc">indicator</string>
    <string name="mua_caption">Most Used Apps</string>
    <string name="name_placeholder">App Name</string>
    <string name="appIconDesc">app icon</string>
    <string name="allAppCaption">All Apps</string>

</resources>
