<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/shortcut_common_actions"
    android:layout_width="@dimen/shortcut_pop_width"
    android:layout_height="50dp"
    android:padding="@dimen/global_small_gap"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight=".25"
        android:gravity="center_horizontal|center_vertical"
        >
        <ImageView
            android:id="@+id/uninstall_icon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/default_shortcut_icon_desc"
            android:src="@android:drawable/ic_delete" />

        <TextView
            android:id="@+id/uninstall_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/label_uninstall"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/small_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight=".25"
        android:gravity="center_vertical|center_horizontal"
    >
        <ImageView
            android:id="@+id/edit_icon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/default_shortcut_icon_desc"
            android:src="@android:drawable/ic_menu_edit" />

        <TextView
            android:id="@+id/edit_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/label_edit"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/small_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight=".25"
        android:gravity="center_vertical|center_horizontal"
        >
        <ImageView
            android:id="@+id/appInfo_icon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/default_shortcut_icon_desc"
            android:src="@android:drawable/ic_menu_info_details" />

        <TextView
            android:id="@+id/appInfo_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/label_app_info"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/small_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight=".25"
        android:gravity="center_vertical|center_horizontal"
        >
        <ImageView
            android:id="@+id/widget_icon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/default_shortcut_icon_desc"
            android:src="@android:drawable/ic_menu_add" />

        <TextView
            android:id="@+id/widget_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/label_widget"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/small_text" />
    </LinearLayout>
</LinearLayout>